--- a/src/styles/mainSection.css
+++ b/src/styles/mainSection.css
@@ -7,7 +7,7 @@
 
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: center;
   align-items: center;
 
   padding: 1.5rem;
